@@ -1,0 +1,1 @@
+!coverage.py: This is a private format, don't read it directly!{"arcs": {"/Users/ball6862/github/waldo/api/responses/wikipedia.py": [], "/Users/ball6862/github/waldo/api/__init__.py": [[-1, 1], [1, -1]], "/Users/ball6862/github/waldo/api/networks/twitter.py": [[6, 9], [34, 38], [41, 43], [5, 6], [-1, 9], [90, -74], [68, 71], [17, 20], [-1, 54], [40, 41], [-1, 28], [58, 62], [46, 47], [86, 89], [43, 46], [11, 24], [63, 64], [84, 86], [1, 2], [89, 90], [-1, 1], [50, 51], [38, 40], [20, 21], [83, 84], [92, -74], [56, 57], [28, 29], [-1, 75], [9, 11], [79, 82], [54, -53], [3, 5], [76, -74], [51, -24], [32, 33], [75, 76], [54, 56], [29, -24], [69, -53], [68, 69], [33, 34], [72, -53], [78, 79], [82, 83], [65, 68], [9, -1], [28, 32], [75, 78], [24, 53], [89, 92], [15, 17], [64, 65], [-1, 12], [12, 15], [21, -11], [71, 72], [47, -24], [46, 50], [57, 58], [62, 63], [74, -9], [2, 3], [53, 74]], "/Users/ball6862/github/waldo/api/exceptions/exceptions.py": [[7, -6], [20, -1], [8, 9], [1, 6], [21, -20], [1, 2], [-1, 1], [6, 7], [20, 21], [-1, 20], [22, -21], [13, 20], [-1, 6], [-1, 15], [14, -13], [2, -1], [16, -14], [-1, 3], [-1, 8], [3, -2], [-1, 22], [13, 14], [6, 13], [15, 16], [9, -7], [-1, 13]], "/Users/ball6862/github/waldo/api/networks/base.py": [[1, 2], [-1, 1], [2, -1], [-1, 4], [1, -1], [4, -2]], "/Users/ball6862/github/waldo/api/networks/wikipedia.py": [[1, 2], [8, -7], [-1, 1], [10, 11], [22, -8], [12, 13], [-1, 7], [-1, 9], [11, 12], [4, 7], [13, 16], [9, 10], [21, 22], [7, -1], [24, -8], [18, 21], [17, 18], [7, 8], [2, 4], [21, 24], [16, 17]], "/Users/ball6862/github/waldo/api/responses/base.py": [], "/Users/ball6862/github/waldo/api/responses/__init__.py": [], "/Users/ball6862/github/waldo/api/exceptions/__init__.py": [[-1, 1], [1, -1]], "/Users/ball6862/github/waldo/api/responses/twitter.py": [], "/Users/ball6862/github/waldo/api/networks/__init__.py": [[-1, 1], [1, -1]]}}
