@@ -1,2 +1,5 @@
 # waldo
 Application that finds articles and relevant tweets
+
+[comment]: <> issues
+[comment]: <> throttling
