@@ -1,0 +1,4 @@
+class NetworkBase(object):
+    def get_feed(self, query, lat=None, lng=None):
+        # method should return properly formatted
+        raise NotImplementedError
