@@ -1,3 +1,13 @@
 [metadata]
 name = Waldo
 author = Ballyn Miller
+
+[nosetests]
+cover-branches = true
+cover-erase = true
+cover-inclusive = true
+cover-min-percentage = 100
+cover-package = api
+match = ^test
+where = tests
+with-coverage = true
