@@ -1,5 +1,6 @@
 [tox]
 envlist = py26,py27,pep8,cover
+skipsdist = True
 
 [testenv]
 deps =
@@ -8,7 +9,7 @@ deps =
 setenv =
     VIRTUAL_ENV = {envdir}
 commands =
-    nosetests tests.unit tests.functional
+    nosetests {posargs} tests.unit tests.functional
 
 [testenv:pep8]
 commands =
@@ -17,3 +18,6 @@ commands =
 [testenv:cover]
 setenv =
     NOSE_WITH_COVERAGE=1
+commands =
+    coverage erase
+    coverage run {envbindir}/nosetests
