@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* Unit & Functional test created
+
 0.0.1
 -----
 
